Cover art support (for fip)
